Add lines for man page and pdf file; add line to actually install the software

--- a/cmd/gvedit/Makefile.am
+++ b/cmd/gvedit/Makefile.am
@@ -3,12 +3,16 @@
 
 SUBDIRS = ui images
 
+pdfdir = $(pkgdatadir)/doc/pdf
 gveditdir = $(pkgdatadir)/gvedit
 
 if WITH_QT
 bin_PROGRAMS = gvedit
 gvedit_DATA = attrs.txt
 endif
+
+man_MANS = gvedit.1
+pdf_DATA = gvedit.1.pdf
 
 gvedit_SOURCES = main.cpp csettings.cpp mainwindow.cpp imageviewer.cpp mdichild.cpp
 
@@ -19,11 +23,14 @@ qMakefile: gvedit.pro
 
 gvedit: main.cpp csettings.cpp mainwindow.cpp imageviewer.cpp mdichild.cpp qMakefile
 	$(MAKE) -f qMakefile prefix=${prefix} exec_prefix=${exec_prefix} top_builddir=$(top_builddir)
+	ln gvedit.app/Contents/MacOS/gvedit .
 
 attrs.txt: $(top_srcdir)/doc/infosrc/attrs
 	cp $(top_srcdir)/doc/infosrc/attrs attrs.txt
 
-EXTRA_DIST = \
-	gvedit.pro.in mdi.qrc
+gvedit.1.pdf: $(srcdir)/gvedit.1
+	- @GROFF@ -Tps -man $(srcdir)/gvedit.1 | @PS2PDF@ - - >gvedit.1.pdf
 
-DISTCLEAN = attrs.txt
+EXTRA_DIST = gvedit.pro.in mdi.qrc $(man_MANS) $(pdf_DATA)
+	
+DISTCLEAN = attrs.txt $(pdf_DATA)
