--- a/cmd/gvedit/Makefile.am
+++ b/cmd/gvedit/Makefile.am
@@ -1,29 +1,61 @@
 # $Id$ $Revision$
 ## Process this file with automake to produce Makefile.in
 
+if WITH_CGRAPH
+GRAPH = cgraph
+else
+GRAPH = graph
+endif
+
 SUBDIRS = ui images
 
 pdfdir = $(pkgdatadir)/doc/pdf
 gveditdir = $(pkgdatadir)/gvedit
+
+man_MANS = gvedit.1
+pdf_DATA = gvedit.1.pdf
 
 if WITH_QT
 bin_PROGRAMS = gvedit
 gvedit_DATA = attrs.txt
 endif
 
-man_MANS = gvedit.1
-pdf_DATA = gvedit.1.pdf
+AM_CPPFLAGS = \
+        -I$(top_srcdir)/lib/common \
+        -I$(top_srcdir)/lib/gvc \
+        -I$(top_srcdir)/lib/pathplan \
+        -I$(top_srcdir)/lib/$(GRAPH) \
+        -I$(top_srcdir)/lib/cdt
 
-gvedit_SOURCES = main.cpp csettings.cpp mainwindow.cpp imageviewer.cpp mdichild.cpp
+gvedit_CPPFLAGS = \
+	$(AM_CPPFLAGS) \
+	$(QTGUI_CFLAGS) \
+	$(QTCORE_CFLAGS) \
+	-DDEMAND_LOADING=1 \
+	-DHAVE_CONFIG_H \
+	-DGVEDIT_DATADIR=$(pkgdatadir)/gvedit
+
+gvedit_LDADD = \
+	$(top_builddir)/lib/gvc/libgvc.la \
+	$(QTGUI_LIBS) \
+	$(QTCORE_LIBS) \
+	$(EXPAT_LIBS) $(Z_LIBS) 
+
+gvedit_SOURCES = main.cpp csettings.cpp mainwindow.cpp imageviewer.cpp mdichild.cpp \
+	moc_csettings.cpp moc_imageviewer.cpp moc_mainwindow.cpp moc_mdichild.cpp qrc_mdi.cpp
 
 noinst_HEADERS = csettings.h imageviewer.h mainwindow.h mdichild.h ui_settings.h 
+
+BUILT_SOURCES = moc_csettings.cpp moc_imageviewer.cpp moc_mainwindow.cpp moc_mdichild.cpp qrc_mdi.cpp
+
+$(BUILT_SOURCES): mocables
 
 qMakefile: gvedit.pro
 	$(QMAKE) -o qMakefile gvedit.pro
 
-gvedit: main.cpp csettings.cpp mainwindow.cpp imageviewer.cpp mdichild.cpp qMakefile
-	$(MAKE) -f qMakefile prefix=${prefix} exec_prefix=${exec_prefix} top_builddir=$(top_builddir)
-	- $(LN_S) -f gvedit.app/Contents/MacOS/gvedit .
+.PHONY: mocables
+mocables: main.cpp csettings.cpp mainwindow.cpp imageviewer.cpp mdichild.cpp qMakefile
+	$(MAKE) -f qMakefile prefix=${prefix} exec_prefix=${exec_prefix} mocables compiler_rcc_make_all
 
 attrs.txt: $(top_srcdir)/doc/infosrc/attrs
 	cp $(top_srcdir)/doc/infosrc/attrs attrs.txt
@@ -32,8 +64,10 @@ gvedit.1.pdf: $(srcdir)/gvedit.1
 	- $(GROFF) -Tps -man $(srcdir)/gvedit.1 | @PS2PDF@ - - >gvedit.1.pdf
 
 EXTRA_DIST = gvedit.pro.in mdi.qrc $(man_MANS) $(pdf_DATA)
+
+CLEANFILES = moc_csettings.cpp moc_imageviewer.cpp moc_mainwindow.cpp moc_mdichild.cpp qrc_mdi.cpp
 	
-DISTCLEANFILES = attrs.txt $(pdf_DATA)
+DISTCLEANFILES = attrs.txt $(pdf_DATA) qMakefile
 
 clean-local:
 	-$(MAKE) -f qMakefile clean
