--- a/cmd/gvedit/gvedit.pro.in
+++ b/cmd/gvedit/gvedit.pro.in
@@ -1,5 +1,5 @@
 
-DEFINES += HAVE_CONFIG_H GVEDIT_DATADIR=@datarootdir@/graphviz/gvedit
+DEFINES += HAVE_CONFIG_H
 LIBS += \
         -L$(top_builddir)/lib/gvc/.libs -lgvc \
         -L$(top_builddir)/lib/graph/.libs -lgraph \
