add check for log2() - not available on Solaris9

--- a/configure.ac
+++ b/configure.ac
@@ -431,7 +431,7 @@ AC_SUBST(MATH_LIBS)
 
 # Check for functions that might need -lm
 LIBS="$LIBS $MATH_LIBS"
-AC_CHECK_FUNCS([feenableexcept fesetenv])
+AC_CHECK_FUNCS([feenableexcept fesetenv log2])
 
 LIBS=$save_LIBS
 
