use backtick syntax to avoid complaints about GNU extensions

--- a/tclpkg/gv/Makefile.am
+++ b/tclpkg/gv/Makefile.am
@@ -133,9 +133,9 @@ gv.a:	gv.cmxa
 
 pkgperldir = $(pkglibdir)/perl
 PERL        ?= perl
-PERL_CC      = $(shell $(PERL) -MExtUtils::Embed -e ccopts)
-PERL_LD      = $(shell $(PERL) -MExtUtils::Embed -e ldopts)
-VENDOR_ARCH  = $(shell $(PERL) -MConfig -e 'print $$Config{installvendorarch};')
+PERL_CC      = `$(PERL) -MExtUtils::Embed -e ccopts`
+PERL_LD      = `$(PERL) -MExtUtils::Embed -e ldopts`
+VENDOR_ARCH  = `$(PERL) -MConfig -e 'print $$Config{installvendorarch};'`
 PERL_data = gv.pm
 nodist_libgv_perl_la_SOURCES = gv_perl.cpp $(PERL_data)
 libgv_perl_la_SOURCES = $(BASESOURCES) gv_dummy_init.c
