--- a/macosx/prebuild/Makefile-packages.incl
+++ b/macosx/prebuild/Makefile-packages.incl
@@ -1,7 +1,7 @@
 ATK_URL=http://ftp.acc.umu.se/pub/gnome/sources/atk/1.32/atk-1.32.0.tar.gz
 AUTOCONF_URL=http://ftp.gnu.org/gnu/autoconf/autoconf-2.68.tar.gz
 AUTOMAKE_URL=http://ftp.gnu.org/gnu/automake/automake-1.11.tar.gz
-CAIRO_URL=http://cairographics.org/releases/cairo-1.10.2.tar.gz
+CAIRO_URL=http://cairographics.org/snapshots/cairo-1.11.2.tar.gz
 FONTCONFIG_URL=http://fontconfig.org/release/fontconfig-2.8.0.tar.gz
 FREETYPE_URL=http://download.savannah.gnu.org/releases-noredirect/freetype/freetype-2.4.4.tar.gz
 # This seems to be permanently down.
@@ -15,7 +15,7 @@ JPEG_URL=http://www.ijg.org/files/jpegsrc.v8b.tar.gz
 LIBICONV_URL=http://ftp.gnu.org/pub/gnu/libiconv/libiconv-1.13.tar.gz
 LIBTOOL_URL=http://ftp.gnu.org/gnu/libtool/libtool-2.2.8.tar.gz
 LIBXML2_URL=ftp://xmlsoft.org/libxml2/libxml2-2.7.8.tar.gz
-PANGO_URL=http://ftp.gnome.org/pub/GNOME/sources/pango/1.28/pango-1.28.3.tar.gz
+PANGO_URL=http://ftp.gnome.org/pub/GNOME/sources/pango/1.28/pango-1.28.4.tar.gz
 PIXMAN_URL=http://cairographics.org/releases/pixman-0.20.2.tar.gz
 PKGCONFIG_URL=http://pkgconfig.freedesktop.org/releases/pkg-config-0.25.tar.gz
 PNG_URL=http://downloads.sourceforge.net/libpng/libpng-1.5.1.tar.gz
